--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -170,7 +170,7 @@
               <a class="nav-link" href="/discovery"><i class="bi bi-compass me-2" title="compass"></i>Discovery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/ranking"><i class="bi bi-trophy me-2" title="crown"></i>Ranking</a>
+              <a class="nav-link" href="/ranking"><i class="bi bi-bar-chart-line me-2" title="crown"></i>Ranking</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/rankingCalendar"><i class="bi bi-calendar me-2" title="calendar"></i>Ranking calendar</a>
@@ -185,10 +185,10 @@
               <a class="nav-link" href="/self/followingWorks"><i class="bi bi-people me-2" title="users"></i>Latest works by followed</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/self/bookmarks"><i class="bi bi-heart me-2" title="heart"></i>Your bookmarks</a>
+              <a class="nav-link" href="/self"><i class="bi bi-person me-2" title="user"></i>Your profile</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/self"><i class="bi bi-person me-2" title="user"></i>Your profile</a>
+              <a class="nav-link" href="/self/bookmarks"><i class="bi bi-heart me-2" title="heart"></i>Your bookmarks</a>
             </li>
           </div>
           <div class="mb-4">
