--- a/assets/views/newest.jet.html
+++ b/assets/views/newest.jet.html
@@ -2,7 +2,7 @@
 {{- import "blocks/underlinenav" }}
 {{- block body() }}
 <div class="row justify-content-center g-4">
-  <h1 class="text-center">Newest works from all users</h1>
+  <h1 class="text-center"><i class="bi bi-stars me-2"></i>Newest</h1>
 
   <div class="col-12">
     <div class="d-flex flex-column flex-md-row align-items-center justify-content-center justify-content-md-end mx-auto mb-4">
