--- a/assets/views/about.jet.html
+++ b/assets/views/about.jet.html
@@ -1,18 +1,19 @@
 {{- extends "layout/default" }}
 {{- block body() }}
 <div class="row justify-content-center g-4">
-  <h1 class="text-center">About PixivFE</h1>
+  <h1 class="text-center"><i class="bi bi-info-circle me-2"></i>About</h1>
 
   <div class="col-12 col-md-9">
     <div class="row">
       <div class="col-12 col-lg-6 mb-4">
-        <h2>Summary</h2>
+        <!-- mb-2 here specifically to not let headings float  -->
+        <h2 class="mb-2">About PixivFE</h2>
         <p>PixivFE is an open-source alternative frontend for Pixiv, allowing you to enjoy artwork without unnecessary distractions.</p>
-        <p>This instance is hosted by the owner of <span class="fw-bold">{{ .DomainName }}</span>. If you're interested in hosting PixivFE yourself, please visit <a href="{{ .RepoURL }}">the source repository</a> for more information.</p>
+        <p">This instance is hosted by the owner of <span class="fw-bold">{{ .DomainName }}</span>. If you're interested in hosting PixivFE yourself, please visit <a href="{{ .RepoURL }}">the source repository</a> for more information.</p>
         <!-- The rest of this column is mostly intended to eliminate weird negative space on this page -->
         <!-- TODO: put actual content here -->
         <!-- The following section is an adapation of Nitter's about page -->
-        <h2>Why use PixivFE?</h2>
+        <h2 class="mb-2">Why use PixivFE?</h2>
         <p>It's impossible to use Pixiv without JavaScript enabled. For privacy-minded folks, preventing JavaScript analytics and IP-based tracking is important, but apart from using a VPN and uBlock/uMatrix, it's impossible. Despite being behind a VPN and using heavy-duty adblockers, you can get accurately tracked with your <a href="https://restoreprivacy.com/browser-fingerprinting/">browser's fingerprint</a>, <a href="https://noscriptfingerprint.com/">no JavaScript required</a>.</p>
         <p>Using an instance of Pixiv, you can browse Pixiv without JavaScript while retaining your privacy. In addition to respecting your privacy, PixivFE is on average around twice as light (in terms of data transfered) than Pixiv, and serves pages faster (e.g. artworks load 2x faster).</p>
         <div class="row">
