--- a/assets/views/discovery.jet.html
+++ b/assets/views/discovery.jet.html
@@ -2,7 +2,7 @@
 {{- import "blocks/underlinenav" }}
 {{- block body() }}
 <div class="row justify-content-center g-4">
-  <h1 class="text-center">Discover artworks</h1>
+  <h1 class="text-center"><i class="bi bi-compass me-2"></i>Discovery</h1>
 
   <div class="col-12">
 
