--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -8,7 +8,7 @@
 {{- Content := isset(Queries.content) ? Queries.content : "all" }}
 
 <div class="row justify-content-center g-4">
-  <h1 class="text-center"><i class="bi bi-bar-chart-line-fill me-2"></i>{{ .Title }}</h1>
+  <h1 class="text-center"><i class="bi bi-bar-chart-line me-2"></i>{{ .Title }}</h1>
 
   {*
   TODO: noscript version causing issues with the underlinenav (blank page on Content switch), disabling it for now
@@ -132,7 +132,11 @@
     </div>
     <div class="d-flex flex-row align-items-center justify-content-between mb-4" aria-label="Ranking options">
       <!-- TODO: use the actual mode and content names instead of variables, and make weekly and monthly show a date range -->
-      <h2 class="text-capitalize mb-0"><i class="bi bi-bar-chart-line-fill me-2"></i>{{ Queries.mode }} {{ Queries.content }} rankings for {{ .Data.CurrentDate }}</h2>
+      {{- if isset(Queries.mode) && isset(Queries.content) }}
+      <h2 class="text-capitalize mb-0"><i class="bi bi-bar-chart-line me-2"></i>{{ Queries.mode }} {{ Queries.content }} rankings for {{ .Data.CurrentDate }}</h2>
+      {{- else }}
+      <h2 class="text-capitalize mb-0"><i class="bi bi-bar-chart-line me-2"></i>Daily All Rankings for {{ .Data.CurrentDate }}</h2>
+      {{- end }}
       <button class="js-required custom-btn-secondary bg-charcoal-surface2" type="button" data-bs-toggle="modal" data-bs-target="#RankingOptionsModal">
         <i class="bi bi-gear-fill me-2"></i>Options
       </button>
