--- a/assets/views/settings.jet.html
+++ b/assets/views/settings.jet.html
@@ -1,6 +1,6 @@
 {{- extends "layout/default" }} {{- block body() }}
 <div class="row justify-content-center" data-hx-boost="false">
-  <h1 class="text-center mb-4">Settings</h1>
+  <h1 class="text-center mb-4"><i class="bi bi-gear me-2"></i>Settings</h1>
   <div class="col-12 col-lg-9">
     <p class="card-text">PixivFE uses <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Cookies">cookies</a> to store your preferences, which you can change on this page to customize your experience on this instance.</p>
     <div class="row">
