make offcanvas title clickable

--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -156,7 +156,9 @@
       <div class="offcanvas-header d-flex align-items-start">
         <div class="d-flex flex-column w-75">
           <!-- TODO: fw-bold for the title? can't decide -->
-          <h2 class="display-6 offcanvas-title mb-0" id="offcanvasNavbarLabel">PixivFE</h2>
+          <a class="text-body text-decoration-none" href="/">
+            <h2 class="display-6 offcanvas-title mb-0" id="offcanvasNavbarLabel">PixivFE</h2>
+          </a>
           <span class="h6 text-muted mb-0">A privacy-respecting alternative front-end for Pixiv that doesn't suck.</span>
         </div>
         <!-- TODO: p-4 is a dirty hack to 'align' the close button with the title; inconsistent across devices -->
