--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -12929,6 +12929,11 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+.custom-btn-secondary:hover, .custom-btn-secondary-flex:hover, .custom-btn-secondary:focus, .custom-btn-secondary-flex:focus, .custom-btn-secondary:active, .custom-btn-secondary-flex:active {
+  background-color: #2d2d2d !important;
+  color: white;
+}
+
 .custom-novel-nav {
   max-height: 40vh;
 }
