--- a/assets/views/blocks/pagination.jet.html
+++ b/assets/views/blocks/pagination.jet.html
@@ -4,7 +4,7 @@
   <div class="d-flex flex-column align-items-center justify-content-center">
     <!-- Pagination dropdown -->
     <div class="js-required dropup mb-3">
-      <button class="custom-btn-secondary bg-charcoal-surface2 dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+      <button class="custom-btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
           Go to Page
       </button>
       <ul class="dropdown-menu">
