--- a/assets/views/blocks/rankingoptions.jet.html
+++ b/assets/views/blocks/rankingoptions.jet.html
@@ -90,7 +90,7 @@ TODO: add additional checks to these UnderlineNav buttons to ensure only valid U
   <div class="row">
     <div class="col-12 d-flex justify-content-between">
       <a href="/ranking" type="button" class="btn btn-danger fw-bold rounded-pill">Reset filters</a>
-      <button type="button" class="custom-btn-secondary bg-charcoal-surface2" data-bs-dismiss="modal">Close</button>
+      <button type="button" class="custom-btn-secondary" data-bs-dismiss="modal">Close</button>
     </div>
   </div>
 {{- end }}
