--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -96,7 +96,7 @@
         <div class="row">
           <div class="col-12 d-flex justify-content-between">
             <a href="/ranking" type="button" class="btn btn-danger fw-bold rounded-pill">Reset filters</a>
-            <button type="button" class="custom-btn-secondary bg-charcoal-surface2" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="custom-btn-secondary" data-bs-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
@@ -137,7 +137,7 @@
       {{- else }}
       <h2 class="text-capitalize mb-0"><i class="bi bi-bar-chart-line me-2"></i>Daily All Rankings for {{ .Data.CurrentDate }}</h2>
       {{- end }}
-      <button class="js-required custom-btn-secondary bg-charcoal-surface2" type="button" data-bs-toggle="modal" data-bs-target="#RankingOptionsModal">
+      <button class="js-required custom-btn-secondary" type="button" data-bs-toggle="modal" data-bs-target="#RankingOptionsModal">
         <i class="bi bi-gear-fill me-2"></i>Options
       </button>
     </div>
@@ -243,7 +243,7 @@
         <div class="row">
           <div class="col-12 d-flex justify-content-between">
             <a href="/ranking" type="button" class="btn btn-danger fw-bold rounded-pill">Reset filters</a>
-            <button type="button" class="custom-btn-secondary bg-charcoal-surface2" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="custom-btn-secondary" data-bs-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
