--- a/assets/views/discovery.jet.html
+++ b/assets/views/discovery.jet.html
@@ -28,7 +28,7 @@
   </div>
 
   <div class="d-flex justify-content-center">
-    <a href="" class="custom-btn-secondary-flex bg-charcoal-surface2">Refresh</a>
+    <a href="" class="custom-btn-secondary-flex">Refresh</a>
   </div>
 
 </div>
