--- a/assets/views/index.jet.html
+++ b/assets/views/index.jet.html
@@ -13,7 +13,7 @@
   <div class="col-12">
     <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
       <h2 class="mb-3 mb-md-0">Today's illustration rankings</h2>
-      <a href="/ranking" class="custom-btn-secondary bg-charcoal-surface2">See more</a>
+      <a href="/ranking" class="custom-btn-secondary">See more</a>
     </div>
 
     <!-- mt-0 to remove the margin that g-4 adds to the top of the element -->
@@ -36,7 +36,7 @@
   <div class="col-12">
     <div class="d-flex justify-content-between align-items-center mb-3">
       <h2>Newest works by users you follow</h2>
-      <a href="/self/followingWorks" class="custom-btn-secondary bg-charcoal-surface2">See more</a>
+      <a href="/self/followingWorks" class="custom-btn-secondary">See more</a>
     </div>
     <div class="row row-cols-2 row-cols-md-4 row-cols-lg-6 g-4">
       {{- include "fragments/small-tn" .Data.Following }}
