styling for Deleted or Private

--- a/assets/views/fragments/small-tn.jet.html
+++ b/assets/views/fragments/small-tn.jet.html
@@ -4,10 +4,14 @@
     <div class="card h-100 border-0 bg-black">
       <img src="/img/deleted.png" alt="{{ .Title }}" class="card-img-top img-fluid" loading="lazy" />
       <div class="card-body py-2 px-0">
-        <p class="card-title text-body text-truncate">{{ .Title }}</p>
-        <div class="align-items-center mt-2">
-          <img src="/img/deleted.png" alt="{{ .ArtistName }}" class="rounded-circle me-2" style="width: 24px; height: 24px;" loading="lazy" />
-          <span class="text-muted">{{ .ArtistName }}</span>
+        <p class="text-truncate mb-1">
+          <span class="fw-bold text-body text-decoration-none">{{ .Title }}</span>
+        </p>
+        <div class="d-flex align-items-center">
+          <div class="align-items-center text-decoration-none text-truncate">
+            <img src="/img/deleted.png" class="rounded-circle me-1" style="width: 24px; height: 24px" />
+            <span class="text-muted">Deleted or Private</span>
+          </div>
         </div>
       </div>
     </div>
