--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -128,8 +128,14 @@
         <span class="badge bg-warning text-dark me-2 mb-2">AI-generated</span>
         {{- end }}
         {{- range .Tags }}
+          {* NOTE: early block to catch the R-18 tag *}
           {{- if isEmphasize(.Name) }}
           <span class="badge bg-danger me-2 mb-2">{{ .Name }}</span>
+          {{- end }}
+        {{- end }}
+        {{- range .Tags }}
+          {{- if isEmphasize(.Name) }}
+          {* Intentionally empty to not render anything to avoid duplication *}
           {{- else }}
           <span class="badge fw-normal text-muted me-2 mb-2 p-0 text-wrap text-break text-start">
             <a href="/tags/{{ escapeString(.Name) }}" class="text-decoration-none text-wrap text-break">#{{ .Name }}</a>
