fix missing object-fit-cover

--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -53,7 +53,7 @@
         <div class="col-12 col-xl-8 mb-3 mb-xl-0">
           <div class="d-flex align-items-center">
             <a href="/users/{{ .User.ID }}" class="me-3">
-              <img src="{{ .User.Avatar }}" alt="{{ .User.Name }}" class="rounded-circle" style="width: 64px; height: 64px;"/>
+              <img src="{{ .User.Avatar }}" alt="{{ .User.Name }}" class="rounded-circle object-fit-cover" style="width: 64px; height: 64px;"/>
             </a>
             <div>
               <h1 class="mb-1">{{ .Title }}</h1>
