--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -89,7 +89,7 @@
         </div>
         <!-- TODO: figure out how to have the logged in user's avatar and name in the navbar -->
         <!-- <a class="h5 text-decoration-none mb-0 d-flex align-items-center" href="/">
-            <img src=" .User.Avatar " width="30" height="30" class="d-inline-block rounded-circle me-2">
+            <img src=" .User.Avatar " width="30" height="30" class="d-inline-block rounded-circle object-fit-cover me-2">
             <p class="m-0"> .User.Name </p>
           </a> -->
       </div>
