--- a/assets/views/rank.jet.html
+++ b/assets/views/rank.jet.html
@@ -138,7 +138,7 @@
       <h2 class="text-capitalize mb-0"><i class="bi bi-bar-chart-line me-2"></i>Daily All Rankings for {{ .Data.CurrentDate }}</h2>
       {{- end }}
       <button class="js-required custom-btn-secondary" type="button" data-bs-toggle="modal" data-bs-target="#RankingOptionsModal">
-        <i class="bi bi-gear-fill me-2"></i>Options
+        <i class="bi bi-gear-fill me-0 me-md-2"></i>Options
       </button>
     </div>
 
