--- a/assets/views/rankingCalendar.jet.html
+++ b/assets/views/rankingCalendar.jet.html
@@ -78,7 +78,7 @@
             </form>
           </div>
           <button class="js-required custom-btn-secondary" type="button" data-bs-toggle="modal" data-bs-target="#RankingOptionsModal">
-            <i class="bi bi-gear-fill me-2"></i>Options
+            <i class="bi bi-gear-fill me-0 me-md-2"></i>Options
           </button>
         </div>
 
