--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -76,7 +76,7 @@
         <!-- Search bar (visible on md and larger devices) -->
         <div class="position-absolute top-50 start-50 translate-middle d-none d-md-block">
           <form class="d-flex" action="/tags" method="post" autocomplete="off">
-            <input class="form-control bg-charcoal-surface2 rounded-pill border-0" type="search" name="name" required placeholder="⌕ Search artworks" aria-label="Search" />
+            <input class="form-control bg-charcoal-surface2 rounded-pill border-0" type="search" name="name" required placeholder="🔍 Search artworks" aria-label="Search" />
           </form>
         </div>
         <!-- Search icon (visible on smaller devices) -->
@@ -92,6 +92,64 @@
             <img src=" .User.Avatar " width="30" height="30" class="d-inline-block rounded-circle object-fit-cover me-2">
             <p class="m-0"> .User.Name </p>
           </a> -->
+      </div>
+
+      <!-- Offcanvas navigation -->
+      <!-- NOTE: located under the nav element otherwise some of the default styling doesn't apply (e.g. hover state for nav-link) -->
+      <div class="offcanvas offcanvas-start bg-charcoal-surface1 border-0" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <!-- Offcanvas header -->
+        <div class="offcanvas-header d-flex align-items-start">
+          <div class="d-flex flex-column w-75">
+            <h2 class="display-6 offcanvas-title mb-0" id="offcanvasNavbarLabel"><a class="text-body text-decoration-none" href="/">PixivFE</a></h2>
+            <span class="text-body-secondary mb-0">An open-source alternative frontend for Pixiv that doesn't suck.</span>
+          </div>
+          <!-- TODO: p-4 is a dirty hack to 'align' the close button with the title; inconsistent across devices -->
+          <button type="button" class="btn-close text-reset p-4" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <!-- Offcanvas body -->
+        <div class="offcanvas-body">
+          <ul class="navbar-nav me-auto">
+            <div class="mb-4">
+              <h3>Explore</h3>
+              <li class="nav-item">
+                <a class="nav-link" href="/discovery"><i class="bi bi-compass me-2" title="compass"></i>Discovery</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/ranking"><i class="bi bi-bar-chart-line me-2" title="crown"></i>Ranking</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/rankingCalendar"><i class="bi bi-calendar me-2" title="calendar"></i>Ranking calendar</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/newest"><i class="bi bi-stars me-2" title="sparkling"></i>Newest</a>
+              </li>
+            </div>
+            <div class="mb-4">
+              <h3>Your profile</h3>
+              <li class="nav-item">
+                <a class="nav-link" href="/self/followingWorks"><i class="bi bi-people me-2" title="users"></i>Latest works by followed</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/self"><i class="bi bi-person me-2" title="user"></i>Your profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/self/bookmarks"><i class="bi bi-heart me-2" title="heart"></i>Your bookmarks</a>
+              </li>
+            </div>
+            <div class="mb-4">
+              <h3>Settings & info</h3>
+              <li class="nav-item">
+                <a class="nav-link" href="/settings"><i class="bi bi-gear me-2" title="settings"></i>Settings</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/about"><i class="bi bi-info-circle me-2" title="about"></i>About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="https://codeberg.org/vnpower/pixivfe"><i class="bi bi-globe me-2" title="globe"></i>Source code</a>
+              </li>
+            </div>
+          </ul>
+        </div>
       </div>
     </nav>
 
@@ -144,67 +202,12 @@
           </div>
           <div class="modal-body p-0">
             <form action="/tags" method="post" autocomplete="off">
-              <input class="form-control bg-charcoal-surface2 rounded-pill border-0" type="search" name="name" required placeholder="⌕ Search artworks" aria-label="Search" />
+              <input class="form-control bg-charcoal-surface2 rounded-pill border-0" type="search" name="name" required placeholder="🔍 Search artworks" aria-label="Search" />
             </form>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- Offcanvas navigation -->
-    <div class="offcanvas offcanvas-start bg-charcoal-surface1 border-0" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-      <div class="offcanvas-header d-flex align-items-start">
-        <div class="d-flex flex-column w-75">
-          <!-- TODO: fw-bold for the title? can't decide -->
-          <h2 class="display-6 offcanvas-title mb-0" id="offcanvasNavbarLabel"><a class="text-body text-decoration-none" href="/">PixivFE</a></h2>
-          <span class="h6 text-muted mb-0">A privacy-respecting alternative front-end for Pixiv that doesn't suck.</span>
-        </div>
-        <!-- TODO: p-4 is a dirty hack to 'align' the close button with the title; inconsistent across devices -->
-        <button type="button" class="btn-close text-reset p-4" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="navbar-nav me-auto">
-          <div class="mb-4">
-            <h3>Explore</h3>
-            <li class="nav-item">
-              <a class="nav-link" href="/discovery"><i class="bi bi-compass me-2" title="compass"></i>Discovery</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/ranking"><i class="bi bi-bar-chart-line me-2" title="crown"></i>Ranking</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/rankingCalendar"><i class="bi bi-calendar me-2" title="calendar"></i>Ranking calendar</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/newest"><i class="bi bi-stars me-2" title="sparkling"></i>Newest</a>
-            </li>
-          </div>
-          <div class="mb-4">
-            <h3>Your profile</h3>
-            <li class="nav-item">
-              <a class="nav-link" href="/self/followingWorks"><i class="bi bi-people me-2" title="users"></i>Latest works by followed</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/self"><i class="bi bi-person me-2" title="user"></i>Your profile</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/self/bookmarks"><i class="bi bi-heart me-2" title="heart"></i>Your bookmarks</a>
-            </li>
-          </div>
-          <div class="mb-4">
-            <h3>Settings & info</h3>
-            <li class="nav-item">
-              <a class="nav-link" href="/settings"><i class="bi bi-gear me-2" title="settings"></i>Settings</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="/about"><i class="bi bi-info-circle me-2" title="about"></i>About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://codeberg.org/vnpower/pixivfe"><i class="bi bi-globe me-2" title="globe"></i>Source code</a>
-            </li>
-          </div>
-        </ul>
-      </div>
-    </div>
   </body>
 </html>
